syntax = "proto3";

option go_package = "go-task/user-service";

package user;

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message CreateRequest {
  string email = 1;
  string password = 2;
  string fullName = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message User {
  string id = 1;
  string email = 2;
  string fullName = 3;
}

message CreateResponse {
  User user = 1;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  User user = 3;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message UserCreatedEvent {
    string userId = 1;
    string email = 2;
    string fullName = 3;
}
